--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -26,7 +26,11 @@ body{
     padding-top: 30px;
     padding-bottom: 30px;
 }
-
+@media screen and (min-width: 1270px){
+    .hero-section{
+        position: fixed;
+    }
+}
 @media screen and (max-width: 1270px) {
     .hero-section{
         display: grid;
