--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -9,7 +9,7 @@ body{
     color: #fff;
     font-size: 22px;
     font-family: "Be Vietnam";
-    /* overflow: hidden; */
+    overflow: scroll!important;
 }
 /* .container-fluid{
     padding: 0px !important;
@@ -24,13 +24,13 @@ body{
     grid-template-columns: 1fr 1fr;
     align-items: center;
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 30px!important;
 }
-@media screen and (min-width: 1270px){
+/* @media screen and (min-width: 1270px){
     .hero-section{
         position: fixed;
     }
-}
+} */
 @media screen and (max-width: 1270px) {
     .hero-section{
         display: grid;
@@ -47,7 +47,7 @@ body{
         margin-top: 50px;
         order:2;
     }
-    .hero-section-content p{
+    .hero-section-content p, h1, h3{
         text-align: center!important;
     }
     .btn2{
